# mrtg

./: .gitignore  ANNOUNCE  BER.pm  BER.pm-for-perl5.001  CHANGES  COPYRIGHT  Contributors  MANIFEST  Makefile.NetWare  Makefile.Win32  Makefile.in  README  README.md  SNMP_Session.pm-for-perl5.001  THANKS  Todo  cfgmaker  config.h.in  configure  configure.in  convert  get_ver.awk  indexmaker  mkinstalldirs  mrtg  mrtg.cfg  mrtg.html  rateup.c  readme.html
.github/: CODEOWNERS
.github/workflows/: build-linux.yml
contrib/: 00INDEX  00INDEX~
contrib/GetSNMPLinesUP/: GetSNMPLinesUP.pl  INSTALL  Makefile  ModemTable.dial-machine
contrib/IxDisk/: README  ixdisk.cfg
contrib/PM3Lines/: README
contrib/PMLines/: PMLines.pl
contrib/TCH/: README  dualpri.pl
contrib/TTrafic/: TTraffic.asp
contrib/accesslistmon/: INSTALL  README  examplescript  mrtg.cfg
contrib/adm-mrtg/: adm-mrtg
contrib/apc_ups/: upsdata01.pl
contrib/ascendget/: ascendget
contrib/atmmaker/: atmmaker
contrib/cfgmaker_ATM/: cfgmaker_atm.pl
contrib/cfgmaker_cisco/: README  cfgmaker.cisco
contrib/cfgmaker_dlci/: cfgmaker_dlci
contrib/cisco_BPX_MGX/: howto.html
contrib/cisco_ipaccounting/: README  TODO  networks
contrib/ciscoindex/: README  ciscoindex.pl
contrib/cpuinfo/: cpuinfo.pl
contrib/cpumon/: README  cpumon.pl
contrib/gentcucci-1.0.0/: gentcucci  gwcs.list  nmcs.list  tcnowstat  tcnowtemp
contrib/get-equi/: README  get-equi.pl
contrib/get-multiserial/: get-modems-remote.pl
contrib/ipchainacc/: README  ipchainacc
contrib/ipchains/: README  ipchainacc  ipchainacc.rules
contrib/ipfilter/: fw.pl  ip-filter.readme
contrib/iptables-accounting/: README
contrib/iptables_acc/: README
contrib/iptables_acc_snmp/: README  iptables_acc_snmp
contrib/ircstats/: README
contrib/ircstats2/: README  crontab.script  ircstats2.pl
contrib/jm/: news-mrtg.pl
contrib/linux_stat/: linux_stats.pl
contrib/meminfo/: README  memory.pl
contrib/monitor/: config.asp  default.asp  global.asa  readme.txt
contrib/mrtg-archiver/: README  backup.pl  mrtg.archive.conf  mrtg.archive.pl
contrib/mrtg-archiver-script/: index.html  mrtg-archiver  mrtgnav
contrib/mrtg-blast/: INSTALL  README  mrtg-blast  mrtg-blast.cfg  tcpblast.c
contrib/mrtg-dynip/: Changes  Install  TODO  mrtg-dynip  mrtg-dynip-d
contrib/mrtg-ipacc/: ipfwadm-wrapper
contrib/mrtg-ipget/: README  mrtg-ipget.patch
contrib/mrtg-mail/: README  mailstats  mailstats.cfg  mqueue  mqueue.cfg  (+2 more)
doc/: cfgmaker.1  cfgmaker.txt  contrib.1  contrib.html  faq.html  forum.pod  index.html  index.txt  index.wml  indexmaker.1  indexmaker.html  indexmaker.pod  indexmaker.txt  logfile.pod  logfile.txt  mrtg-contrib.1  mrtg-contrib.pod  mrtg-contrib.txt  mrtg-faq.1  mrtg-faq.html  mrtg-faq.pod  mrtg-faq.txt  mrtg-forum.1  mrtg-forum.pod  mrtg-forum.txt  mrtg-ipv6.1  mrtg-ipv6.txt  mrtg-logfile.1  mrtg-logfile.html  mrtg-logfile.pod  mrtg-logfile.txt  mrtg-mibhelp.1  mrtg-mibhelp.html  mrtg-mibhelp.pod  mrtg-mibhelp.txt  mrtg-nt-guide.1  mrtg-nt-guide.pod  mrtg-nt-guide.txt  mrtg-nw-guide.1  mrtg-nw-guide.pod  (+32 more)
src/: .gitignore  ANNOUNCE  CHANGES  Changes  MANIFEST  Makefile  Makefile.Win32  Makefile.in  bootstrap  config.h.in  configure  configure.ac  configure.in  mrtg.cfg-dist  rateup.c
src/contrib/: 00INDEX
src/contrib/GetSNMPLinesUP/: GetSNMPLinesUP.pl  Makefile
src/contrib/accesslistmon/: examplescript
src/contrib/debian-systemd/: README  mrtg.init  mrtg.service
src/contrib/exim-stats/: README  check-email  email-count1  email-queue1  email-totals1  email.cfg
src/contrib/iptables-accounting/: iptables-accounting
src/contrib/mrtg-dynip/: Changes  FAQ  README
src/contrib/mrtg-ipacc/: ipacc
src/contrib/mrtg-systemd/: README  mrtg.service
src/contrib/mrtgindex.cgi/: mrtgindx.cgi
src/contrib/mrtgmk/cfg/: page1.html
src/contrib/mrtgrq/: make-mrtg.cfg.awk
src/contrib/net-hosts/: make-mrtg.cfg.awk  net-hosts
src/contrib/ovmrtg/: cfgmakerov
src/contrib/ping-probe/: mrtg-ping-probe
src/contrib/rdlog2/: wan.fig
src/contrib/routers/: README
src/contrib/stat/: dns_mrtg  stat.pl
src/contrib/whodo/GIFgraph/GIFgraph/: lines.pm
src/contrib/whodo/GIFgraph/GIFgraph/t/: bars.t
src/doc/: cfgmaker.pod  cfgmaker.txt  contrib.txt  index.html  index.txt  index.wml  indexmaker.pod  indexmaker.txt  logfile.html  mrtg-contrib.1  mrtg-contrib.html  mrtg-contrib.pod  mrtg-contrib.txt  mrtg-faq.html  mrtg-faq.pod  mrtg-faq.txt  mrtg-forum.1  mrtg-forum.pod  mrtg-forum.txt  mrtg-ipv6.1  mrtg-ipv6.txt  mrtg-logfile.1  mrtg-logfile.pod  mrtg-logfile.txt  mrtg-mailer.pod  mrtg-mibhelp.txt  mrtg-nt-guide.1  mrtg-nt-guide.pod  mrtg-nt-guide.txt  mrtg-nw-guide.pod  mrtg-nw-guide.txt  mrtg-reference.1  mrtg-reference.pod  mrtg-reference.txt  mrtg-rrd.1  mrtg-rrd.html  mrtg-rrd.pod  mrtg-rrd.txt  mrtg-squid.pod  mrtg-squid.txt  (+18 more)
src/lib/mrtg2/: BER.pm  MRTG_lib.pm  Net_SNMP_util.pm  SNMP_Session.pm  SNMP_util.pm  locales_mrtg.pm
src/src/: rateup.c
src/t/: translation.t
src/translate/: big5.pmd  brazilian.pmd  bulgarian.pmd  catalan.pmd  cn.pmd  danish.pmd  estonian.pmd  eucjp.pmd  french.pmd  gb.pmd  gb2312.pmd  german.pmd  greek.pmd  hungarian.pmd  indonesia.pmd  italian.pmd  locales_mrtg.pm  macedonian.pmd  malay.pmd  polish.pmd  portuguese.pmd  romanian.pmd  russian.pmd  russian1251.pmd  serbian.pmd  skeleton.pm0  slovenian.pmd  spanish.pmd  swedish.pmd
translate/: README  big5.pmd  brazilian.pmd  bulgarian.pmd  catalan.pmd  chinese.pmd  cn.pmd  croatian.pmd  danish.pmd  dutch.pmd  estonian.pmd  eucjp.pmd  fixer  galician.pmd  gb2312.pmd  german.pmd  german.pmd.backup  greek.pmd  icelandic.pmd  indonesia.pmd  italian.pmd  korean.pmd  lithuanian.pmd  locales_mrtg.pm  macedonian.pmd  polish.pmd  romanian.pmd  russian.pmd  serbian.pmd  skeleton.pm0  slovak.pmd  slovenian.pmd  spanish.pmd  swedish.pmd  turkish.pmd  ukrainian1251.pmd
web/: .gitignore  .htaccess  .wmkrc  .wmlrc  3party.wml  build.sh  design.css  download.wml  hoster.html  index.wml  license.wml  mirror.html  nabble-mrtg.wml  navbar.inc  site-sync  sponsor.wml
(+765 files in other folders)
